@@ -5348,6 +5348,17 @@ If you run into problems with `quarantine' for tarballs downloaded in a
 browser, consider using @command{curl -OL} to download (as illustrated
 above) or @command{xattr -c} to remove extended attributes.
 
+@command{configure} defaults to @option{--with-internal-tzcode} on
+macOS.  The native implementation was unusable on earlier versions of
+even 64-bit macOS (with a 32-bit @code{time_t} and/or timezone tables
+missing information beyond the 32-bit range).  For, e.g.@:, macOS 12.6
+option @option{--without-internal-tzcode} can be used to override this
+and @R{} contains sufficient workarounds (for example, the native code
+fails to recognize dates with a negative @code{tm_year}, that is dates
+before 1900) for @R{} to pass its checks.  However, there are
+discrepancies, notablly in Europe in the 1900s and 1940s, even though
+the Olson database contains the correct information.
+
 @node Fortran compilers, Cairo graphics, Prerequisites, macOS
 @subsection Fortran compilers
 
